<resources>
    <string name="app_name">Babu 88</string>
    <string name="currency_and_language">Currency And Language</string>
    <string name="inr">₹ INR</string>
    <string name="npr">रू NPR</string>
    <string name="bdt">৳ BDT</string>
    <string name="english">English</string>
    <string name="bengali">Bengali</string>
    <string name="nepalese">Nepalese</string>
    <string name="hindi">Hindi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download_app">Download App</string>
    <string name="referrals">Referrals</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="fill_up_here">Fill up here</string>
    <string name="promotion">Promotion</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="betting_pass">Betting Pass</string>
    <string name="ipl_2024_">IPL 2024 Special Betting Pass</string>
    <string name="agent_affiliate">Agent Affiliate</string>
    <string name="games">Games</string>
    <string name="cricket">Cricket</string>
    <string name="live_casino">Live Casino</string>
    <string name="slot_games">Slot Games</string>
    <string name="table_games">Table Games</string>
    <string name="sports_book">Sportsbook</string>
    <string name="fishing">Fishing</string>
    <string name="crash">Crash</string>
    <string name="others">Others</string>
    <string name="language">Language</string>
    <string name="faq">FAQ</string>
    <string name="forum">Forum</string>
    <string name="logout">Logout</string>
    <string name="all">All</string>
    <string name="search_games">Search games</string>
    <string name="new_">New</string>
    <string name="rewards">Rewards</string>
    <string name="bet_history">Bet History</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="home">Home</string>
    <string name="deposit">Deposit</string>
    <string name="account">Account</string>
    <string name="register_now">Register Now</string>
    <string name="fill_up_here_pass">Fill up Password here\n</string>
    <string name="password_cnf">Confirm Password</string>
    <string name="cnf_pass">Confirm the password</string>
    <string name="next">Next</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="currency">Currency</string>
    <string name="mendatory_field">This is a mandatory field</string>
    <string name="error_field">Must Contain at least 6 to 11 character</string>
    <string name="password_match_error">Password not matched</string>
    <string name="user_name_invalid">Username must contain letters &amp; numbers only</string>
    <string name="verification_code">Verification Code</string>
    <string name="phone">Phone Number</string>
    <string name="referal_code">" Referral Code"</string>
    <string name="terms_and_conditions">I am of legal age and I agree with the <b><u>Terms and Condition</u></b></string>
    <string name="complete_registration">Complete Registration</string>
    <string name="level">Level</string>
    <string name="go_to_my_level">Go to My Level</string>
    <string name="details">Details</string>
    <string name="apply_now">Apply Now</string>
    <string name="text_term_condition">\nSERIES TEMP\nGet ready for the upcoming exciting matches by boosting your account balance with a 5% sports bonus and an extra 5% live casino bonus in our! Don\'t just be a spectator - be a part of the winning excitement! \n\n This promotion is available to all members. \nThis promotion starts from 21:30 (GMT+5.5) on 18th January 2024 until 21:29 (GMT+5.5) on 18th March 2024. \n<i>*This promotion is only available on days when there are no BPL or PSL matches.</i>\n\n What Should You Do?\n- Select this offer on the deposit page while making your deposit.\n- Make a minimum deposit of 500 INR. \n\n What Do You Get?\n- You will immediately receive a 5% live casino bonus, followed by a 5% sports bonus the next day.\nExample: If you deposit 1,000 INR, then the live casino bonus you will receive is 50 INR (1,000 x 5% = 50). The next day, you will receive a sport bonus of 50 INR (1,000 x 5% = 50). The total amount you will receive is 1,100 INR (1,000 + 50 + 50 = 1,100). \n\n - Baji reserves the right to exclude any member from this promotion at any time and to vary, amend, change and /or withdraw any bonus offers or promotions without providing any explanation whatsoever.\n- Bajiâ€™s General Terms and Conditions apply.</string>
    <string name="other_topics">Other Topics</string>
    <string name="about_us">About US</string>
    <string name="contact_us">Contact US</string>
    <string name="responsible_gaming">Responsible Gaming</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="referral_program">Referral Program</string>
    <string name="text_referrals">Share your referral code with your friend now and start earning extra cash for every friend you invite. Get lifetime commission up to a total of 2% commission every time your friend makes a deposit!</string>
    <string name="your_referral_code">Your Referral Code:</string>
    <string name="share">Share</string>
    <string name="redeem_history">Redeem History</string>
    <string name="referral_report">Referral Report</string>
    <string name="download_report">Download Report</string>
    <string name="your_referral_status">Your Referral Status</string>
    <string name="turnover">Turnover</string>
    <string name="free_bonus">Free Bonus ৳</string>
    <string name="expired_date">Expired Date:</string>
    <string name="referral_bonus">Referral Bonus</string>
    <string name="share_now">Share Now</string>
    <string name="referral_code">Referral Code:</string>
    <string name="id">ID:</string>
    <string name="redeem">Redeem</string>
    <string name="commission_to_redeem">Commission To Redeem</string>
    <string name="claim">Claim</string>
    <string name="available_referral_ncommission">Available Referral \nCommission</string>
    <string name="friend_s_naccepted">Friend\'s \nAccepted</string>
    <string name="friend_ncomplete">Friend \nComplete</string>
    <string name="turnover_range_more_than">Turnover Range: More Than</string>
    <string name="referral">Referral</string>
    <string name="bank_details">Bank Details</string>
    <string name="add">Add</string>
    <string name="bank">Bank</string>
    <string name="bank_holder_name">Bank Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="upi_address">UPI Address</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="you_have_not_saved_a_bank_account_yet">You have not saved a bank account yet</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="my_profile">My Profile</string>
    <string name="mobile">Mobile</string>
    <string name="already_verified">Already Verified</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="to_protect_your_privacy_please_contact">To protect your privacy, please contact</string>
    <string name="_live_chat"><u>live chat</u></string>
    <string name="_to_change_your_profile_details">to change your profile details</string>
    <string name="featured_games">Featured Games</string>
    <string name="casino_games">Casino Games</string>
    <string name="how_to_join_be_a_babu88_agent_affiliate">How to join be a babu88 agent affiliate ?</string>
    <string name="click_on_the_button_below_and_fill_in_the_google_form">Click on the button below and fill in the Google Form</string>
    <string name="babu88_managers_will_contact_you_after_you_submit_the_google_form_n_so_be_patience">BABU88 Managers will contact you after you submit the Google Form.\n So be patience</string>
    <string name="after_receiving_the_babu88_agent_account_you_can_now_invite_players_and_start_earning">After receiving the BABU88 agent account, You can now invite players and start EARNING!</string>
    <string name="click_here_to_join">Click here to join!</string>
    <string name="an_agent_account_may_only_service_the_country_of_the_site_the_account_is_registered_if_an_agent_wishes_to_service_other_countries_please_reach_out_to_our_agent_managers_after_registration">** An agent account may only service the country of the site the account is registered. If an agent wishes to service other countries, please reach out to our agent managers after registration.</string>
    <string name="babu88_commission_calculation">BABU88 commission calculation</string>
    <string name="example">Example</string>
    <string name="babu88_back_up_links">Babu88 back up links:</string>
    <string name="babu88_know_how_frustrating_it_can_be_when_a_website_goes_down_use_these_alternative_links_to_access_our_site_while_we_work_on_fixing_the_issue">BABU88 know how frustrating it can be when a website goes down. Use these alternative links to access our site while we work on fixing the issue.</string>
    <string name="www_babuplay_com">www.babuplay.com</string>
    <string name="www_babu88_app">www.babu88.app</string>
    <string name="www_babu88a_com">www.babu88a.com</string>
    <string name="www_babu88b_com">www.babu88b.com</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="in_play">In-Play</string>
    <string name="multi_markets">Multi Markets</string>
    <string name="sports">Sports</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="approved">Approved</string>
    <string name="withdraw_method">Withdraw Method</string>
    <string name="withdraw_id">Withdraw ID</string>
    <string name="withdraw_channel">Withdraw Channel</string>
    <string name="text_vip_1">There are seven major tier levels under the babu8.buzz VIP Club, each with its exclusive privileges.\n\nThese tiers are: Elite (comprising Elite I, Elite II, Elite III, Elite IV, and Elite V), Pro (comprising Pro I, Pro II, and Pro III), Expert (comprising Expert I, Expert II, and Expert III), Master (comprising Master I, and Master II), Grandmaster, Legend, and Mythic.\n\nElite, Pro, and Expert VIPs can redeem cash using VIP Points. You can unlock even greater benefits at the Master VIP level. These additional advantages include VIP payment channels, a dedicated 24/7 Personal VIP Manager, birthday reward, loyalty bonuses, and exclusive VIP bonuses, all in addition to the cash redemption.\n\nWhen you reach Grandmaster, Legend, and Mythic VIP levels, you will be entitled to all the benefits of the Master VIP level with additional exclusive rewards and gifts!</string>
    <string name="text_vip_21">â€˜VIP Points To Cashâ€™ Redemption</string>
    <string name="text_vip_31">VIP Payment Channel</string>
    <string name="text_vip_41">24/7 Personal VIP Manager</string>
    <string name="text_vip_51">VIP Exclusive Rewards</string>
    <string name="text_vip_6">One of the biggest perks of joining our babu8.buzz VIP Club is benefiting from the exclusive giveaway. We\'re giving out generous amounts of bonuses, cash prizes and mystery gifts all year long.</string>
    <string name="terms_conditions_apply"><u><![CDATA[* Terms & Conditions Apply]]></u></string>
    <string name="your_rewards_and_benefits">Your Rewards and Benefits</string>
</resources>