<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_vip_dialog"
    android:padding="16dp"
    tools:context=".ui.vipdetails.DialogRewardsBenefitsFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:src="@drawable/vip_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/iv_close">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_your_rewards_benefits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heebo_bold"
                android:text="@string/your_rewards_and_benefits"
                android:textColor="#DAB665"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/heebo_bold"
                android:justificationMode="inter_word"
                android:text="@string/text_vip_1"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_your_rewards_benefits" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/heebo_bold"
                android:justificationMode="inter_word"
                android:text="@string/text_vip_21"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_text1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/heebo_bold"
                android:justificationMode="inter_word"
                android:text="@string/text_vip_31"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_text2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/heebo_bold"
                android:justificationMode="inter_word"
                android:text="@string/text_vip_41"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_text3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/heebo_bold"
                android:justificationMode="inter_word"
                android:text="@string/text_vip_51"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_text4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/heebo_bold"
                android:justificationMode="inter_word"
                android:text="@string/text_vip_6"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_text5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_terms_conditions_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="35dp"
                android:fontFamily="@font/heebo_medium"
                android:justificationMode="inter_word"
                android:padding="5dp"
                android:text="@string/terms_conditions_apply"
                android:textColor="@color/vip_text"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_text6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>