<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="12dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/date"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/date"
        tools:text="@string/date" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/method"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/withdraw_method"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_method"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/method"
        tools:text="@string/withdraw_method" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/channel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/withdraw_channel"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/method" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_channel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/channel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/channel"
        tools:text="@string/withdraw_channel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/withdraw_id"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/channel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/id"
        tools:text="@string/withdraw_id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/withdraw_amount"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/amount"
        tools:text="@string/withdraw_amount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mobile_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/mobile_number"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_mobile_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/mobile_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/mobile_number"
        tools:text="@string/mobile_number" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/status"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_number" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_right_tick"
        android:drawablePadding="8dp"
        android:fontFamily="@font/heebo_medium"
        android:text="@string/approved"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/status"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/status" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/status" />

</androidx.constraintlayout.widget.ConstraintLayout>